<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/ll_detailActivity_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/food_eaten"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text="@string/originally"/>

            <EditText
                android:id="@+id/et_detailActivity_foodOriginally"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="Weight g"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text=""/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/after_a_day"/>

            <EditText
                android:id="@+id/et_detailActivity_foodAfter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="Weight g"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text="@string/water_drinken"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text="@string/originally"/>

            <EditText
                android:id="@+id/et_detailActivity_waterOriginally"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="Weight mL"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text=""/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="@string/after_a_day"/>

            <EditText
                android:id="@+id/et_detailActivity_waterAfter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="Weight mL"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text="@string/weight"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:text=""/>

            <EditText
                android:id="@+id/et_detailActivity_weight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="Weight g"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_detailActivity_pickDate"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:text="Pick Date"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/ll_detailActivity_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="16dp"
        tools:text="11/20/2020"
        android:id="@+id/tv_detailActivity_date"
        app:layout_constraintLeft_toRightOf="@+id/bt_detailActivity_pickDate"
        app:layout_constraintBaseline_toBaselineOf="@id/bt_detailActivity_pickDate"/>


    <Button
        android:id="@+id/bt_detailActivity_save"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Save"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/savebutton_ripple"/>

</androidx.constraintlayout.widget.ConstraintLayout>